# space_sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  space_sim.cpp  space_sim.h
include/: globals.h  graphics.hpp
src/: graphics.cpp
